--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,68 @@
 .App {
+  color: #000;
+  min-height: 100vh;
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+header {
+  padding: 2em;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.grid {
+  margin: 0 auto;
+  max-width: 960px;
+  text-align: center;
 }
 
-.App-link {
-  color: #61dafb;
+.individual {
+  text-align: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.individual .card {
+  margin: 0 auto;
+}
+
+.back {
+  cursor: pointer;
+}
+
+.back:hover {
+  text-decoration: underline;
+}
+
+.card {
+  width: 300px;
+}
+
+.star {
+  background-image: url("data:image/svg+xml;charset=utf8,%3C?xml version='1.0' encoding='UTF-8'?%3E%3Csvg xmlns='http://www.w3.org/2000/svg' width='240' height='240'%3E%3Cpath fill='%23FFFFFF' d='m48,234 73-226 73,226-192-140h238z'/%3E%3C/svg%3E");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  cursor: pointer;
+  display: none;
+  fill: #fff;
+  height: 30px;
+  opacity: .6;
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 30px;
+  z-index: 1;
+}
+
+.card:hover .star {
+  display: block;
+}
+
+.star.fave {
+  background-image: url("data:image/svg+xml;charset=utf8,%3C?xml version='1.0' encoding='UTF-8'?%3E%3Csvg xmlns='http://www.w3.org/2000/svg' width='240' height='240'%3E%3Cpath fill='%23F8D64E' d='m48,234 73-226 73,226-192-140h238z'/%3E%3C/svg%3E");
+  fill: #fffc33;
+  opacity: 1;
+  /* stroke: #fffc33; */
+}
+
+.fact {
+  border-top: 1px solid #999;
+  padding-top: 8px;
 }
